--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git Learning</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Hello, Git</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi ut vel natus, culpa inventore nobis similique, libero molestias distinctio provident quae et, quaerat beatae architecto enim quo accusantium odit quod.</p>
 </body>
 </html>
